[tool.poetry]
name = "rgw-model"
version = "0.1.0"
description = "Rabbit Grass Weeds model implementation in Python (multi-agent system)"
authors = ["Maciej Stepkowski"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "~3.5.1"
simpy = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
